# lmpforecast

./: .env.template  .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GRIDSTATUS_GUIDE.md  README.md  pyproject.toml  requirements.txt  run_forecast.py  run_forecast_with_gridstatus.py  setup.cfg
notebooks/: data_exploration_visualization.ipynb  feature_analysis_model_comparison.ipynb  gridstatus_integration_demo.ipynb  model_building_visualization_demo.ipynb
src/: __init__.py
src/data/: ercot_gridstatus_integration.py  ercot_price_data.py  ercot_weather_data.py
src/models/: garch_model.py  hybrid_model.py  nn_model.py
src/utils/: preprocessing.py  schemas.py  validation_example.py
src/visualization/: plotting.py
