[metadata]
name = ercot_price_forecasting
version = 0.1.0
description = Forecasting ERCOT electricity prices using a hybrid neural network and GARCH model
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.19.0
    pandas>=1.2.0
    matplotlib>=3.3.0
    plotly>=5.3.0
    tensorflow>=2.5.0
    scikit-learn>=0.24.0
    arch>=5.0.0
    pandera>=0.10.0
    mypy>=0.910
    jupyter>=1.0.0
    seaborn>=0.11.0
    statsmodels>=0.13.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=23.0.0
    isort>=5.10.0
    mypy>=0.910
    pre-commit>=2.17.0
    pytest>=6.0.0
    pytest-cov>=2.12.0
    ruff>=0.1.0
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
    nbsphinx>=0.8.0
    jupyter>=1.0.0
notebook =
    jupyter>=1.0.0
    jupyterlab>=3.0.0
    nbstripout>=0.5.0
